# python-react-agent-runtime

./: .env.example  .gitignore  .tool_policy.example.json  INTERVIEW_DOCS.md  LICENSE  README.md  TRACE_VIEWER.md  agent.py  hooks.py  memory.py  prompt_template.py  pyproject.toml  run_traces.py  skills.py  team.py  tool_policy.py  tools.py
.mcp/: config.json
evals/: README.md  __init__.py  cases.json  runner.py
internal_mcp/: __init__.py  client.py  config.py  policy.py  registry.py  types.py
internal_mcp/servers/: repo_intel_server.py
interview_docs/: interview.md  interview_demo_plan.md  interview_flowchart.md
rag/: build_index.py  document_pipeline.py
rag/docs/: example.md
scripts/: merge_traces.py  run_evals.py  run_tests.py  view_runs.py
skills/analyze-code/: SKILL.md  reference.md
skills/analyze-code/scripts/: run.py
skills/export-markdown-pdf/: SKILL.md
skills/export-markdown-pdf/scripts/: run.py
skills/list-files/: SKILL.md
skills/write-tests/: SKILL.md
test/: live_repo_intel_demo.py  test_agent_evals.py  test_agent_mcp.py  test_agent_teams.py  test_hooks.py  test_mcp_config.py  test_mcp_registry.py  test_memory.py  test_react_loop.py  test_repo_intel_server.py  test_run_traces.py  test_skills.py  test_subagent.py  test_team.py  test_tool_policy.py  test_tools.py
