[project]
name = "python-react-agent-runtime"
version = "0.1.0"
description = "A CLI-based ReAct Agent runtime with tool calling, policy control, trace logging, memory, and MCP integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "mcp>=1.7.1",
    "openai>=1.91.0",
    "python-dotenv>=1.1.1",
    "ddgs>=9.13.0",
    "chromadb>=1.5.7",
    "sentence-transformers>=5.4.0",
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
]

[tool.uv]
